# SMP

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  copyPlugins.sh  package.json  smartHome.js
client/: CMakeLists.txt
clients/c++/: CMakeLists.txt  main.cpp
clients/chrome/: manifest.json  package.json  popup.css  popup.html  popup.js  webpack.config.js
clients/chrome-old/: mustache.min.js  popup.html
clients/chrome/src/css/: popup.css
clients/chrome/src/js/: config.js  popup.js  popup.jsx  websocket.js
clients/chrome/src/js/popup/: fixtureComponent.jsx  fixtureControlComponent.jsx  redux.js  roomComponent.jsx
clients/chrome/src/js/popup/components/: card.jsx  drawer.jsx  header.jsx  main.jsx  page.jsx
clients/chrome/src/js/popup/components/deviceList/: deviceControl.jsx  deviceList.jsx  deviceListItem.jsx
clients/chrome/src/js/popup/components/list/: list.jsx  listItem.jsx
clients/chrome/src/js/popup/components/roomList/: roomList.jsx  roomListItem.jsx
clients/chrome/utils/: build.js  webserver.js
clients/chromev2/: package.json  webpack.config.js  webpack.cordova.config.js
clients/chromev2/src/: manifest.json
clients/chromev2/src/css/: popup.css
clients/chromev2/src/css/fonts/web fonts/roboto_regular_macroman/: Roboto-Regular-demo.html
clients/chromev2/src/js/popup/: popup.jsx  redux.js  settings.js  websocket.js
clients/chromev2/src/js/popup/components/: Device.jsx  Frame.js  Room.jsx
clients/chromev2/utils/: buildCordova.js
cmake/modules/: GitVersion.cmake  version.cpp.in
conf/: KNX.json  Scenes.json  X11.json  knx.json
config/: smart_home.conf
config/plugins/: gpio.conf
doc/: SMP.tex  Structure.tex
exampleClient/: CMakeLists.txt  main.cpp
examples/: client.rs  cmd-client.rs
lib/: benchmark.js  helpers.js  log.js  settings.js  settings.json  smartHome.js  sync.js  sync.json
old-nodejs/: package.json
old-nodejs/lib/: log.js  smartHome.js
old-nodejs/plugins/gpio/: package.json
old-nodejs/settings/: settings.json
plugin/: CMakeLists.txt
plugin-library/: CMakeLists.txt  CMakeLists.txt.old
plugin-library/include/: Channel.hpp  EventQueue.hpp  InterruptHandle.hpp  Logger.hpp  Plugin.hpp  PluginHandler.hpp  SafeQueue.hpp  UDPSocket.hpp
plugin-library/src/: Channel.cpp  Plugin.cpp  PluginHandler.cpp  UDPSocket.cpp
plugin/include/: Channel.cpp  Channel.hpp  EventQueue.hpp  Logger.hpp  Plugin.hpp  PluginHandler.hpp  SafeQueue.hpp
plugin/src/: Channel.cpp  Logger.cpp  Plugin.cpp  PluginHandler.cpp
plugin_gpio/: CMakeLists.txt
plugin_gpio/src/: main.cpp
plugin_knx/: CMakeLists.txt  KNX-Interaction
plugin_knx/src/: common.cpp  common.hpp  knx.cpp  knx.hpp  main.cpp
plugins/: gpio.js  rename.js  webapp.js
plugins/REST/: CMakeLists.txt
plugins/REST/src/: main.cpp
plugins/Websocket/: CMakeLists.txt
plugins/Websocket/src/: main.cpp
plugins/X11/: CMakeLists.txt
plugins/X11/src/: main.cpp  xhklib.cpp  xhklib.hpp
plugins/gpio/: CMakeLists.txt  gpio.js  package.json  wiringPiHandler.js
plugins/gpio/src/: main.cpp
plugins/knx/: CMakeLists.txt  Cargo.toml  knx.js  package.json
plugins/knx/src/: knx.cpp  knx.hpp  lib.rs  main.cpp
plugins/multicast/: Cargo.toml
plugins/multicast/src/: lib.rs
plugins/scenes/: CMakeLists.txt
plugins/scenes/src/: main.cpp
plugins/stdio/: Cargo.toml
plugins/stdio/src/: lib.rs
plugins/webapp/: package.json  webapp.js
plugins/webapp/meteor/: packages.json  webapp.html  webapp.js
plugins/webapp/meteor/.meteor/: .id  packages
server/: CMakeLists.txt  CMakeLists.txt.old
server/src/: InterruptHandle.hpp  Logger.cpp  Logger.h  PluginLoader.cpp  PluginLoader.hpp  main.cpp
settings/: settings.json  sync.json
shared_objects/: Cargo.toml
shared_objects/src/: lib.rs
smartHome/: Cargo.toml
smartHome/src/: main.rs  plugin_handler.rs
smartHomePlugin/: CMakeLists.txt
smartHomePlugin/include/: Channel.cpp  Channel.hpp  EventQueue.hpp  PluginHandler.hpp  SafeQueue.hpp
smartHomePlugin/src/: Plugin.cpp  PluginHandler.cpp  udpsocket.cpp
src/: EventQueue.hpp  InterruptHandle.hpp  SafeQueue.hpp  client.cpp  config.rs  main.cpp  main.rs  multicast-client.rs  multicast.rs  networking.cpp  networking.h  networking.rs  server.cpp
src/networking/: mod.rs  networking.cpp  networking.hpp  udpreceiver.cpp  udpreceiver.hpp  udpsender.cpp  udpsender.hpp  udpsocket.cpp  udpsocket.hpp
src/plugin_framework/: Channel.hpp  Plugin.cpp  Plugin.hpp
src/plugins/: gpio.rs  knx.rs  mod.rs
