[package]
name = "smartHome"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[dependencies]
net2 = "0.2.19"
rand = "0.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "multicast"
path = "src/multicast.rs"

[[bin]]
name = "multicast-client"
path = "src/multicast-client.rs"
