[package]
name = "smart_home"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[dependencies]
sysfs_gpio = { version = "0.3.3", optional = true }
rust-ini = "0.9.2"
net2 = "0.2.19"
rand = "0.3"

[features]
default = []
gpio = ["sysfs_gpio"]

[lib]
name = "networking"
path = "src/networking.rs"
plugin = true
