[package]
name = "multicast"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[lib]
name = "multicast"
crate_type = ["dylib"]

[dependencies]
net2 = "0.2.26"
bincode = "0.6.0"
serde = "0.8.0"
serde_macros = "0.8"

[dependencies.shared_objects]
path = "../../shared_objects"
version = "*"
